--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*General styles start*/
 body {
     background-color: #f9fcfe;
-    font-family: 'Lato'; sans-serif;
+    font-family: 'Lato';  sans-serif;
     color: #291f1a;
 }
 /*main-nav start*/
@@ -145,39 +145,41 @@ section#portfolio>h1#portfolio-header>span.portfolio-span{
      color: #1ac056; 
 }
 
-section#portfolio>div.portfolio{
+section#portfolio > div.portfolios {
     font-size: 0;
 }
-
-section#portfolio>div.portfolio>div.port-item{
+section#portfolio > div.portfolios > div#port-item-1 {
+    background-image: url("../img/portfolio1.jpg");
+}
+section#portfolio > div.portfolios > div#port-item-2 {
+    background-image: url("../img/portfolio2.jpg");
+}
+section#portfolio > div.portfolios > div#port-item-3 {
+    background-image: url("../img/portfolio3.jpg");
+}
+section#portfolio > div.portfolios > div.port-item {
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 33.3%;
+    height: 350px;
+    position: relative;
     display: inline-block;
 }
-
-section#portfolio>div.portfolio>div.port-item>p.port-mask{
-    font-size: 30px;
-    text-align: center;
-    color: white;
-    font-weight: 100;
-    background-color: rgba(0, 0, 0, 0.5);
+section#portfolio > div.portfolios > div.port-item > div.port-mask {
+    width: 100%;
+	height: 100%;
+    top: 0;
+    background-color: rgba(0,0,0,0.5);    
+    opacity: 0;
+    position: absolute;
+    transition: all 0.5s ease-out;
 }
-
-section#portfolio>div.portfolio>div#port-item-1{
-    background-image: url(../img/portfolio1.jpg);
-    width: 33.3%;
+section#portfolio > div.portfolios > div.port-item > div.port-mask:hover {
+    opacity: 1;
 }
-
-section#portfolio>div.portfolio>div#port-item-2{
-    background-image: url(../img/portfolio2.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 33.3%;
-}
-
-section#portfolio>div.portfolio>div#port-item-3{
-    background-image: url(../img/portfolio4.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 33.3%;
+section#portfolio > div.portfolios > div.port-item > div.port-mask > p {
+    font-size: 15px;
+    color: #fff;
 }
 /*section portfolio stop*/
 
@@ -186,10 +188,11 @@ section#contact{
     background-color: #213b50;
     color: white;
     width: 100%;
+    display: inline-block;
 }
 
 section#contact>div.data{
-    width: 50%;
+    float: left;
     text-align: left;
     margin-left: 100px;
 }
@@ -204,6 +207,14 @@ section#contact>div.data>p#contact-data>a#mail{
 
 section#contact>div.data>h1#contact-header>span.contact-span{
      color: #1ac056; 
+}
+
+section#contact>div.form {
+  clear: left;
+}
+
+section#contact>div.form>input.input{
+    background-color:#2b4a64;
 }
 /*section contact stop*/
 
